--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,31 @@
+@font-face {
+  font-family: "Meritta";
+  src: url("../assets/font/meritta.woff"); }
+
+@font-face {
+  font-family: "Soage";
+  src: url("../assets/font/Soage.ttf"); }
+
 * {
   box-sizing: border-box; }
 
 html,
 body {
   background-color: #FFFFFF; }
+
+.caption-title {
+  font-family: 'Meritta';
+  font-size: 200px;
+  line-height: 125px; }
+
+.last-caption-title {
+  font-family: 'Meritta';
+  font-size: 100px;
+  line-height: 50px; }
+
+.caption {
+  font-family: 'Soage';
+  font-size: 25px; }
 
 .parallax {
   perspective: 100px;
@@ -47,17 +69,35 @@ body {
   display: table;
   margin: 0 auto;
   width: 100%;
-  margin-bottom: 150px; }
+  margin-bottom: 150px;
+  text-align: center; }
 
 .photo-col {
-  float: left;
+  float: none;
+  display: table-cell;
   width: 50%;
-  padding: 30px; }
+  padding: 30px;
+  text-align: center;
+  vertical-align: middle; }
 
 .photo-col-r {
-  float: right;
+  float: none;
+  display: table-cell;
   width: 50%;
-  padding: 30px; }
+  padding: 30px;
+  text-align: center;
+  vertical-align: middle; }
+
+.last-page {
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d; }
+
+.last-page-div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center; }
 
 .photo {
   display: block;
@@ -140,4 +180,12 @@ body {
   .parallax__cover {
     display: none; }
   .photo-row {
-    margin-bottom: 250px; } }
+    margin-bottom: 300px; }
+  .caption-title {
+    font-size: 175px;
+    line-height: 100px; }
+  .last-caption-title {
+    font-size: 80px;
+    line-height: 50px; }
+  .caption {
+    font-size: 35px; } }
